[package]
name = "degenerate"
version = "0.0.1"
description = "A degenerate programming language"
edition = "2021"
license = "CC0-1.0"
autotests = false

[workspace]
members = [".", "bin/serve", "integration"]

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "0.2.0"
getrandom = { version = "0.2.6", features = ["js"] }
log = "0.4.17"
nalgebra = "0.31.0"
rand = { version = "0.8.4" }
strum = { version = "0.24.0", features = ["derive"] }
# keep in sync with `.github/workflows/ci.yaml`
wasm-bindgen = "0.2.80"

[dependencies.web-sys]
version = "0.3.57"
features = [
  "CanvasRenderingContext2d",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "HtmlCollection",
  "HtmlElement",
  "HtmlTextAreaElement",
  "ImageData",
  "InputEvent",
  "Location",
  "WebGl2RenderingContext",
  "WebGlBuffer",
  "WebGlFramebuffer",
  "WebGlProgram",
  "WebGlShader",
  "WebGlTexture",
  "WebGlUniformLocation",
  "Window",
  "console",
]

[dev-dependencies]
approx = "0.5.0"
