[package]
name = "degenerate"
version = "0.0.1"
description = "A degenerate programming language"
edition = "2021"
license = "CC0-1.0"
autotests = false

[workspace]
members = [".", "bin/serve"]

[dependencies]
base64 = "0.13.0"
console_error_panic_hook = "0.1.7"
console_log = "0.2.0"
getrandom = { version = "0.2.6", features = ["js"] }
image = "0.24.2"
js-sys = "0.3.57"
log = "0.4.17"
nalgebra = "0.31.0"
rand = { version = "0.8.4" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.24.0", features = ["derive"] }
# keep in sync with `.github/workflows/ci.yaml`
wasm-bindgen = "0.2.80"

[dependencies.web-sys]
version = "0.3.57"
features = [
  "CanvasRenderingContext2d",
  "Document",
  "DomTokenList",
  "Element",
  "HtmlAnchorElement",
  "HtmlBrElement",
  "HtmlCanvasElement",
  "HtmlCollection",
  "HtmlDivElement",
  "HtmlElement",
  "HtmlInputElement",
  "HtmlLabelElement",
  "HtmlOptionElement",
  "HtmlSelectElement",
  "HtmlTextAreaElement",
  "ImageData",
  "KeyboardEvent",
  "Location",
  "MessageEvent",
  "WebGl2RenderingContext",
  "WebGlActiveInfo",
  "WebGlBuffer",
  "WebGlContextAttributes",
  "WebGlFramebuffer",
  "WebGlProgram",
  "WebGlShader",
  "WebGlTexture",
  "WebGlUniformLocation",
  "Window",
  "Worker",
  "console",
]

[dev-dependencies]
approx = "0.5.0"
