[package]
name = "integration"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
approx = "0.5.0"
axum = "0.5.6"
base64 = "0.13.0"
chromiumoxide = "0.3.5"
executable-path = "1.0.0"
futures = "0.3.21"
image = "0.24.1"
lazy_static = "1.4.0"
pretty_assertions = "1.0.0"
tempfile = "3.2.0"
tokio = { version = "1.18.2", features = ["macros", "rt", "rt-multi-thread"] }
tower-http = { version = "0.3.0", features = ["fs", "trace"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.0", features = ["env-filter"] }
unindent = "0.1.7"
