[package]
name = "integration"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
serve = { path = "../bin/serve" }
base64 = "0.13.0"
chromiumoxide = "0.3.5"
futures = "0.3.21"
image = "0.24.1"
lazy_static = "1.4.0"
tokio = { version = "1.18.2", features = ["macros", "rt", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3.0", features = ["env-filter"] }
unindent = "0.1.7"
